MDEV-30901 Index usage for DATE(datetime_column) = const does not work for engine Memory

Fix incorrect approach to determine whether a field is part of an index.
Remove "force index" hints from tests.
Add tests with composite indexes